--- a/app/src/main/res/layout/activity_schedule_managment.xml
+++ b/app/src/main/res/layout/activity_schedule_managment.xml
@@ -11,12 +11,12 @@
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         tools:context=".ui.schedulemanagement.ScheduleManagementActivity">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <FrameLayout
                 android:id="@+id/calendar_fragment"
