--- a/app/src/main/res/layout/events_card_view.xml
+++ b/app/src/main/res/layout/events_card_view.xml
@@ -6,6 +6,7 @@
     android:layout_width="@dimen/size_90dp"
     android:layout_height="@dimen/size_80dp"
     android:layout_marginTop="@dimen/size_10dp"
+    android:layout_marginStart="@dimen/size_2dp"
     android:layout_marginEnd="@dimen/size_18dp"
     android:background="@drawable/corner_radius_background_modify_slots"
     android:backgroundTint="@color/title_background_blue"
