--- a/app/src/main/res/layout/fragment_deseleting_dialog.xml
+++ b/app/src/main/res/layout/fragment_deseleting_dialog.xml
@@ -12,8 +12,8 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:padding="@dimen/size_15dp"
         tools:context=".ui.timeslot.deselectingdialog.DeselectingDialogFragment">
 
