--- a/app/src/main/res/layout/time_slot_bottom.xml
+++ b/app/src/main/res/layout/time_slot_bottom.xml
@@ -41,26 +41,47 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <TextView
-            android:id="@+id/time_slot_12_3am"
-            android:layout_width="@dimen/size_100dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/size_10dp"
-            android:layout_marginTop="@dimen/size_5dp"
-            android:fontFamily="@font/poppins_medium"
-            android:text="@string/_12am_3am"
-            android:textSize="@dimen/size_14sp" />
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/size_10dp">
 
-        <TextView
-            android:id="@+id/address_12_3am"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/size_10dp"
-            android:layout_marginTop="@dimen/size_5dp"
-            android:fontFamily="@font/poppins_medium"
-            android:paddingBottom="@dimen/size_12dp"
-            android:text="@string/available"
-            android:textSize="@dimen/size_14sp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/time_slot_12_3am"
+                    android:layout_width="@dimen/size_100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/size_10dp"
+                    android:layout_marginTop="@dimen/size_5dp"
+                    android:fontFamily="@font/mulish_medium"
+                    android:text="@string/_12am_3am"
+                    android:textSize="@dimen/size_14sp" />
+
+                <TextView
+                    android:id="@+id/address_12_3am"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/size_10dp"
+                    android:layout_marginTop="@dimen/size_5dp"
+                    android:fontFamily="@font/mulish_medium"
+                    android:text="@string/available"
+                    android:textSize="@dimen/size_14sp" />
+
+            </LinearLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/slot_list_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/size_10dp"
+                android:layout_marginTop="@dimen/size_10dp" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
