FEATURE - 2873(Display Booked Events UI (ListType) Inside Modify Slot)
- CustomExpandableListAdapter.kt and CustomModifyExpandableListAdapterDay.kt inside added logic of to show booked slots data in recycler view.
- MonthModifyExpandableListFragment.kt and WeekModifyExpandableListFragment.kt files restrict completed date slots.
- strings.xml file added slot booked text.
- time_slot_bottom.xml and time_slot_list.xml added recycler view.
- drawable file added booked_event icons with different resolution.
- Added BookedEventsList data class for carry booked slot recyclerview data.
- booked_event_list_recycler_item.xml added.
- BookedSlotsRecyclerViewAdapter for slots recyclerview.

--- a/app/src/main/res/layout/booked_event_list_recycler_view_item.xml
+++ b/app/src/main/res/layout/booked_event_list_recycler_view_item.xml
@@ -9,6 +9,7 @@
         android:id="@+id/image_view_12_3am"
         android:layout_width="@dimen/size_18dp"
         android:layout_height="@dimen/size_18dp"
+        android:layout_marginStart="@dimen/size_2dp"
         android:contentDescription="@string/icon"
         android:src="@drawable/booked_event"
         app:layout_constraintBottom_toBottomOf="parent"
