--- a/app/src/main/res/layout/activity_schedule_managment.xml
+++ b/app/src/main/res/layout/activity_schedule_managment.xml
@@ -31,16 +31,18 @@
                 android:id="@+id/switch_btn_tx"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/size_10dp"
                 android:layout_marginBottom="@dimen/size_10dp"
+                android:layout_marginEnd="@dimen/size_5dp"
                 android:fontFamily="@font/poppins_regular"
                 android:gravity="end"
                 android:text="@string/switch_to_modify_slots_availability"
                 android:textAlignment="textEnd"
                 android:textColor="@color/black"
-                android:textSize="@dimen/size_16sp"
+                android:textSize="@dimen/size_15sp"
                 app:layout_constraintBottom_toTopOf="@id/timeslots_fragment"
                 app:layout_constraintEnd_toStartOf="@+id/switch_btn"
-                app:layout_constraintHorizontal_bias="0.8"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/calendar_fragment" />
 
