--- a/app/src/main/res/layout/event_details_card_view.xml
+++ b/app/src/main/res/layout/event_details_card_view.xml
@@ -78,7 +78,7 @@
 
         <TextView
             android:id="@+id/event_type_text"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/size_150dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/size_12dp"
             android:fontFamily="@font/poppins_semibold"
@@ -91,14 +91,16 @@
             app:layout_constraintTop_toBottomOf="@+id/code_text" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="@dimen/size_100dp"
+            android:id="@+id/constraintLayout2"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/cut_off_date_background"
             android:padding="@dimen/size_2dp"
-            android:paddingStart="@dimen/size_10dp"
+            android:paddingStart="@dimen/size_5dp"
+            android:layout_marginStart="@dimen/size_5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.9"
-            app:layout_constraintStart_toEndOf="@+id/event_type_text"
+            app:layout_constraintStart_toEndOf="@+id/textView2"
             app:layout_constraintTop_toTopOf="@+id/event_type_text">
 
             <TextView
@@ -155,77 +157,143 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <LinearLayout
-            android:id="@+id/date_title_text_layout"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/event_date_tx"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/size_12dp"
-            android:layout_marginTop="@dimen/size_35dp"
-            android:orientation="horizontal"
+            android:layout_marginTop="@dimen/size_12dp"
+            android:fontFamily="@font/mulish_regular"
+            android:text="@string/event_date"
+            android:textSize="@dimen/size_15sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/event_type_text">
+            app:layout_constraintTop_toBottomOf="@+id/event_type_text" />
 
-            <TextView
-                android:layout_width="@dimen/size_100dp"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/mulish_regular"
-                android:text="@string/event_date"
-                android:textSize="@dimen/size_15sp" />
-
-            <TextView
-                android:layout_width="@dimen/size_100dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/size_10dp"
-                android:fontFamily="@font/mulish_regular"
-                android:text="@string/service_date"
-                android:textSize="@dimen/size_15sp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/date_text_layout"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/size_12dp"
-            android:layout_marginTop="@dimen/size_2dp"
-            android:orientation="horizontal"
+            android:layout_marginStart="@dimen/size_10dp"
+            android:layout_marginTop="@dimen/size_12dp"
+            android:fontFamily="@font/mulish_regular"
+            android:text="@string/service_date"
+            android:textSize="@dimen/size_15sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/event_date_tx"
+            app:layout_constraintTop_toBottomOf="@+id/event_type_text" />
+
+        <TextView
+            android:id="@+id/event_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/mulish_regular"
+            android:text="@string/aug_26"
+            android:textColor="@color/elephant_black"
+            android:textSize="@dimen/size_18sp"
+            app:layout_constraintEnd_toEndOf="@+id/event_date_tx"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/date_title_text_layout">
+            app:layout_constraintTop_toBottomOf="@+id/event_date_tx" />
 
-            <TextView
-                android:id="@+id/event_date"
-                android:layout_width="@dimen/size_100dp"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/mulish_regular"
-                android:text="@string/aug_26"
-                android:textColor="@color/elephant_black"
-                android:textSize="@dimen/size_18sp" />
+        <TextView
+            android:id="@+id/service_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/mulish_regular"
+            android:text="@string/_12_aug"
+            android:textColor="@color/elephant_black"
+            android:textSize="@dimen/size_18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/textView2"
+            app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
-            <TextView
-                android:id="@+id/service_date"
-                android:layout_width="@dimen/size_100dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/size_10dp"
-                android:fontFamily="@font/mulish_regular"
-                android:text="@string/_12_aug"
-                android:textColor="@color/elephant_black"
-                android:textSize="@dimen/size_18sp" />
+        <TextView
+            android:id="@+id/change_of_mind"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/size_12dp"
+            android:fontFamily="@font/mulish_medium"
+            android:text="@string/change_in_mind"
+            android:textColor="@color/blue"
+            android:textSize="@dimen/size_14sp"
+            android:visibility="invisible"
+            android:layout_marginTop="@dimen/size_25dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/service_date"
+            app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
-            <TextView
-                android:id="@+id/change_of_mind"
-                android:layout_width="@dimen/size_150dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/size_8dp"
-                android:fontFamily="@font/mulish_medium"
-                android:paddingStart="@dimen/size_5dp"
-                android:text="@string/change_in_mind"
-                android:textColor="@color/blue"
-                android:textSize="@dimen/size_14sp"
-                android:visibility="invisible" />
+        <!--        <LinearLayout-->
+        <!--            android:id="@+id/date_title_text_layout"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_marginTop="@dimen/size_35dp"-->
+        <!--            android:orientation="horizontal"-->
+        <!--            app:layout_constraintBottom_toTopOf="@+id/date_text_layout"-->
+        <!--            app:layout_constraintEnd_toEndOf="parent"-->
+        <!--            android:layout_marginStart="@dimen/size_12dp"-->
+        <!--            app:layout_constraintHorizontal_bias="0.0"-->
+        <!--            app:layout_constraintStart_toStartOf="parent"-->
+        <!--            app:layout_constraintTop_toBottomOf="@+id/event_type_text">-->
 
-        </LinearLayout>
+        <!--            <TextView-->
+        <!--                android:layout_width="wrap_content"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:fontFamily="@font/mulish_regular"-->
+        <!--                android:text="@string/event_date"-->
+        <!--                android:textSize="@dimen/size_15sp" />-->
+
+
+        <!--        </LinearLayout>-->
+
+        <!--        <LinearLayout-->
+        <!--            android:id="@+id/date_text_layout"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_marginTop="@dimen/size_2dp"-->
+        <!--            android:orientation="horizontal"-->
+        <!--            app:layout_constraintEnd_toEndOf="parent"-->
+        <!--            android:layout_marginStart="@dimen/size_12dp"-->
+        <!--            app:layout_constraintHorizontal_bias="0.0"-->
+        <!--            app:layout_constraintStart_toStartOf="parent"-->
+        <!--            app:layout_constraintTop_toBottomOf="@+id/date_title_text_layout">-->
+
+        <!--            <TextView-->
+        <!--                android:id="@+id/event_date"-->
+        <!--                android:layout_width="wrap_content"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:fontFamily="@font/mulish_regular"-->
+        <!--                android:text="@string/aug_26"-->
+        <!--                android:textColor="@color/elephant_black"-->
+        <!--                android:textSize="@dimen/size_18sp" />-->
+
+        <!--            <TextView-->
+        <!--                android:id="@+id/service_date"-->
+        <!--                android:layout_width="wrap_content"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:layout_marginStart="@dimen/size_10dp"-->
+        <!--                android:fontFamily="@font/mulish_regular"-->
+        <!--                android:text="@string/_12_aug"-->
+        <!--                android:textColor="@color/elephant_black"-->
+        <!--                android:textSize="@dimen/size_18sp" />-->
+
+        <!--                        <TextView-->
+        <!--                            android:id="@+id/change_of_mind"-->
+        <!--                            android:layout_width="wrap_content"-->
+        <!--                            android:layout_height="wrap_content"-->
+        <!--                            android:layout_marginStart="@dimen/size_8dp"-->
+        <!--                            android:fontFamily="@font/mulish_medium"-->
+        <!--                            android:paddingStart="@dimen/size_5dp"-->
+        <!--                            android:text="@string/change_in_mind"-->
+        <!--                            android:textColor="@color/blue"-->
+        <!--                            android:textSize="@dimen/size_14sp"-->
+        <!--                            android:visibility="invisible" />-->
+
+        <!--        </LinearLayout>-->
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/new_req_layout"
@@ -237,7 +305,7 @@
             android:paddingBottom="@dimen/size_10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/date_text_layout">
+            app:layout_constraintTop_toBottomOf="@+id/event_date">
 
             <LinearLayout
                 android:id="@id/right_arrow_imageView"
@@ -262,7 +330,7 @@
                     android:layout_marginStart="@dimen/size_10dp"
                     android:layout_weight="1.6"
                     android:fontFamily="@font/mulish_regular"
-                    android:text="@string/New_Request"
+                    android:text="Order Details"
                     android:textAlignment="center"
                     android:textColor="@color/white"
                     android:textSize="@dimen/size_14sp" />
