Task 2879 Calendar month changes and 2884 Won Bid flow
-Added the logic for won bid in ActionsAndStatusFragment.kt
-Changed the size in ui  to fit the all resolution
-Added the logic to the full month and year CalendarUtils.kt
-Changed the dim of ActionDetailsFragment.kt
layout to fit in all resolution

--- a/app/src/main/res/layout/event_details_card_view.xml
+++ b/app/src/main/res/layout/event_details_card_view.xml
@@ -330,7 +330,7 @@
                     android:layout_marginStart="@dimen/size_10dp"
                     android:layout_weight="1.6"
                     android:fontFamily="@font/mulish_regular"
-                    android:text="Order Details"
+                    android:text="@string/order_details"
                     android:textAlignment="center"
                     android:textColor="@color/white"
                     android:textSize="@dimen/size_14sp" />
