--- a/app/src/main/res/values/custom_styles.xml
+++ b/app/src/main/res/values/custom_styles.xml
@@ -6,10 +6,12 @@
     </style>
 
     <style name="FullScreenDialogTheme" parent="Theme.AppCompat.Light.DialogWhenLarge">
-        <item name="android:statusBarColor" tools:targetApi="lollipop">@color/white</item>
+        <item name="android:statusBarColor" tools:targetApi="lollipop">@color/title_background_blue</item>
         <item name="windowNoTitle">true</item>
+        <item name="android:windowFullscreen">false</item>
         <item name="android:windowAnimationStyle">@style/Animation.Design.BottomSheetDialog</item>
     </style>
+
 
     <style name="FlatButton" parent="Widget.AppCompat.Button.Colored">
         <item name="android:textColor">@color/white</item>
