- Default google-services.json - Default Build Variant as Production - Custom Expandable View to have dynamic height

--- a/app/src/main/res/layout/fragment_time_slots_expandable_list.xml
+++ b/app/src/main/res/layout/fragment_time_slots_expandable_list.xml
@@ -13,10 +13,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ExpandableListView
+        <com.smf.events.ui.timeslotmodifyexpanablelist.SMFExpandableListView
             android:id="@+id/expendableList"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/size_1000dp"
+            android:layout_height="wrap_content"
             android:childDivider="@color/white"
             android:divider="@color/white"
             android:dividerHeight="@dimen/dp_0"
